--- a/index.html
+++ b/index.html
@@ -106,80 +106,97 @@
         <!-- portfolio section starts here -->
         <section id="portfolio" class="container pb-4">
             <div class="row">
-            <!-- my-4 used to add top and bottom margin to heading -->   
-            <div class="col-12 text-center my-4">
-                <h2 class="display-5">Portfolio</h2>
-            </div> 
-            <!-- Cols for cards Card 1 -->
-            <div class="col-12 col-md-6">
-                <div class="card mb-3">
-                    <img src="assets/images/wags-and-walks.webp" class="card-img-top"
-                        alt="A man walking several dogs early in the morning">
-                    <div class="card-body">
-                        <h3 class="card-title">Wags & Walks</h3>
-                        <p class="card-text">A platform for a dog walking service designed to fit the busy
-                            lifestyles of pet
-                            owners. Focused on promoting a healthy life for dogs, this site showcases convenient
-                            scheduling
-                            options
-                            and services.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                <!-- my-4 used to add top and bottom margin to heading -->
+                <div class="col-12 text-center my-4">
+                    <h2 class="display-5">Portfolio</h2>
+                </div>
+                <!-- Cols for cards Card 1 -->
+                <div class="col-12 col-md-6">
+                    <div class="card mb-3">
+                        <img src="assets/images/wags-and-walks.webp" class="card-img-top"
+                            alt="A man walking several dogs early in the morning">
+                        <div class="card-body">
+                            <h3 class="card-title">Wags & Walks</h3>
+                            <p class="card-text">A platform for a dog walking service designed to fit the busy
+                                lifestyles of pet
+                                owners. Focused on promoting a healthy life for dogs, this site showcases convenient
+                                scheduling
+                                options
+                                and services.</p>
+                            <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="card mb-3">
+                        <img src="assets/images/we-wellness.webp" class="card-img-top"
+                            alt="A spa with candles towels and natural material">
+                        <div class="card-body">
+                            <h3 class="card-title">We Wellness</h3>
+                            <p class="card-text">A comprehensive platform offering a wide range of wellness services and
+                                high-end
+                                products. From yoga classes to nutritional guidance, users can find everything they need
+                                to
+                                nurture
+                                their body, mind, and spirit.</p>
+                            <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="card mb-3">
+                        <img src="assets/images/math-wiz.webp" class="card-img-top"
+                            alt="A child practicing math at a computer">
+                        <div class="card-body">
+                            <h3 class="card-title">Math Wiz</h3>
+                            <p class="card-text">An interactive website dedicated to helping kids master mathematics
+                                through
+                                games and
+                                challenges. Designed with young learners in mind, this platform turns complex problems
+                                into
+                                engaging
+                                activities. </p>
+                            <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="card mb-3">
+                        <img src="assets/images/bmi-calculator.webp" class="card-img-top"
+                            alt="Weighing scales seen from the first person view of the person standing on the scales">
+                        <div class="card-body">
+                            <h3 class="card-title">BMI Calculator</h3>
+                            <p class="card-text">Promoting a healthier lifestyle with an easy-to-use BMI Calculator.
+                                Designed to
+                                provide quick health assessments, this tool helps users understand and manage their body
+                                mass
+                                index with
+                                just a few clicks.</p>
+                            <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6">
-                <div class="card mb-3">
-                    <img src="assets/images/we-wellness.webp" class="card-img-top"
-                        alt="A spa with candles towels and natural material">
-                    <div class="card-body">
-                        <h3 class="card-title">We Wellness</h3>
-                        <p class="card-text">A comprehensive platform offering a wide range of wellness services and
-                            high-end
-                            products. From yoga classes to nutritional guidance, users can find everything they need
-                            to
-                            nurture
-                            their body, mind, and spirit.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="card mb-3">
-                    <img src="assets/images/math-wiz.webp" class="card-img-top"
-                        alt="A child practicing math at a computer">
-                    <div class="card-body">
-                        <h3 class="card-title">Math Wiz</h3>
-                        <p class="card-text">An interactive website dedicated to helping kids master mathematics
-                            through
-                            games and
-                            challenges. Designed with young learners in mind, this platform turns complex problems
-                            into
-                            engaging
-                            activities. </p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="card mb-3">
-                    <img src="assets/images/bmi-calculator.webp" class="card-img-top"
-                        alt="Weighing scales seen from the first person view of the person standing on the scales">
-                    <div class="card-body">
-                        <h3 class="card-title">BMI Calculator</h3>
-                        <p class="card-text">Promoting a healthier lifestyle with an easy-to-use BMI Calculator.
-                            Designed to
-                            provide quick health assessments, this tool helps users understand and manage their body
-                            mass
-                            index with
-                            just a few clicks.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
-                    </div>
-                </div>
-            </div>
-        </div>
         </section>
 
     </main>
+
+    <!-- Contact section -->
+    <footer id="contact" class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 text-center my-4">
+                <h2 class="display-5">Contact</h2>
+                <p class="mt-4">Got questions or ideas? I'd love to hear from you! Whether you're interested in
+                    collaboration, have inquiries about my projects, or wish to request a copy of my CV, please don't
+                    hesitate to get in touch. I'm always open to discussing new opportunities and how we can work
+                    together to create something amazing!</p>
+            </div>
+            <div class="col-12 col-md-10 col-lg-8">
+                <!-- Add your form here -->
+                
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
