Saved for after stand down

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <h2 class="display-5">Portfolio</h2>
                 </div>
                 <!-- Cols for cards Card 1 -->
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 sharp-corners">
                     <div class="card mb-3">
                         <img src="assets/images/wags-and-walks.webp" class="card-img-top"
                             alt="A man walking several dogs early in the morning">
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 sharp-corners">
                     <div class="card mb-3">
                         <img src="assets/images/we-wellness.webp" class="card-img-top"
                             alt="A spa with candles towels and natural material">
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="card mb-3">
+                    <div class="card mb-3 sharp-corners">
                         <img src="assets/images/math-wiz.webp" class="card-img-top"
                             alt="A child practicing math at a computer">
                         <div class="card-body">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="card mb-3">
+                    <div class="card mb-3 sharp-corners">
                         <img src="assets/images/bmi-calculator.webp" class="card-img-top"
                             alt="Weighing scales seen from the first person view of the person standing on the scales">
                         <div class="card-body">
