--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="lead mb-5">Let's create something amazing together!</p>
 
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Subscribe to my newsletter!
                 </button>
             </div>
@@ -200,24 +200,24 @@
             </div>
             <div class="col-12 col-md-10 col-lg-8 mb-4">
                 <!-- Add your form here -->
-                <form class="row g-3">
-                    <div class="col-lg-4">
+                <form class="row g-3 sharp-corners">
+                    <div class="col-lg-4 sharp-corners">
                         <label for="full-name" class="form-label">Full name</label>
                         <input type="text" class="form-control" id="full-name">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 sharp-corners">
                         <label for="phonenumber" class="form-label">Phone number</label>
                         <input type="number" class="form-control" id="phonenumber">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 sharp-corners">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 sharp-corners">
                         <label for="message" class="form-label">Message</label>
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 sharp-corners">
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </form>
@@ -227,7 +227,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg sharp-corners">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
