Comp. end of lesson challenge

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="lead mb-5">Let's create something amazing together!</p>
 
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-primary sharp-corners custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Subscribe to my newsletter!
                 </button>
             </div>
@@ -118,8 +118,8 @@
                     <h2 class="display-5">Portfolio</h2>
                 </div>
                 <!-- Cols for cards Card 1 -->
-                <div class="col-12 col-md-6 sharp-corners">
-                    <div class="card mb-3">
+                <div class="col-12 col-md-6">
+                    <div class="card mb-3 sharp-corners">
                         <img src="assets/images/wags-and-walks.webp" class="card-img-top"
                             alt="A man walking several dogs early in the morning">
                         <div class="card-body">
@@ -134,8 +134,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 sharp-corners">
-                    <div class="card mb-3">
+                <div class="col-12 col-md-6">
+                    <div class="card mb-3 sharp-corners">
                         <img src="assets/images/we-wellness.webp" class="card-img-top"
                             alt="A spa with candles towels and natural material">
                         <div class="card-body">
@@ -218,7 +218,7 @@
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
                     <div class="col-12 sharp-corners">
-                        <button type="submit" class="btn btn-primary">Send</button>
+                        <button type="submit" class="btn btn-primary custom-button">Send</button>
                     </div>
                 </form>
             </div>
@@ -246,7 +246,7 @@
                                 <input type="email" class="form-control" id="inputEmail">
                             </div>
                             <div class="col-12 mb-4">
-                                <button type="submit" class="btn btn-primary">
+                                <button type="submit" class="btn btn-primary custom-button">
                                     Sign up!
                                 </button>
                             </div>
